# reactor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-shaders.bat  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
shaders/: composite.frag  composite.frag.spv  composite.slang  composite.vert  composite.vert.spv  triangle.frag  triangle.frag.spv  triangle.slang  triangle.vert  triangle.vert.spv
src/: Allocator.cpp  Allocator.hpp  Buffer.cpp  Buffer.hpp  DescriptorSet.cpp  DescriptorSet.hpp  FrameManager.cpp  FrameManager.hpp  Image.hpp  ImageStateTracker.h  Imgui.cpp  Imgui.hpp  Pipeline.cpp  Pipeline.hpp  Sampler.cpp  Sampler.h  Sampler.hpp  Swapchain.cpp  Swapchain.hpp  UniformManager.hpp  Uniforms.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanUtils.hpp  Window.cpp  Window.hpp  main.cpp  pch.hpp  vulkan_context.cpp  vulkan_context.hpp
src/core/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  EventManager.cpp  EventManager.hpp  ModelIO.cpp  ModelIO.hpp  OrbitController.cpp  OrbitController.hpp  Uniforms.hpp  Vertex.hpp  Window.cpp  Window.hpp  main.cpp
src/imgui/: Imgui.cpp  Imgui.hpp
src/logging/: ImGuiConsoleSink.cpp  ImGuiConsoleSink.hpp  Logger.hpp  SpdlogSink.cpp  SpdlogSink.hpp
src/tools/: ModelBuilder.cpp
src/vulkan/: Allocator.cpp  Allocator.hpp  Buffer.cpp  Buffer.hpp  DebugUtils.hpp  DescriptorSet.cpp  DescriptorSet.hpp  FrameManager.hpp  Image.cpp  Image.hpp  ImageStateTracker.cpp  ImageUtils.cpp  ImageUtils.hpp  Mesh.cpp  Mesh.hpp  MeshGenerators.cpp  MeshGenerators.hpp  Pipeline.cpp  Pipeline.hpp  Sampler.cpp  Sampler.hpp  ShaderModule.cpp  ShaderModule.hpp  ShadowMapping.cpp  ShadowMapping.hpp  Swapchain.cpp  Swapchain.hpp  UniformManager.cpp  UniformManager.hpp  Vertex.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanUtils.hpp
